--- a/CodePipeline_EC2_1.yaml
+++ b/CodePipeline_EC2_1.yaml
@@ -1,14 +1,14 @@
 Parameters: {}
 Resources: 
- MyInstance: 
+ WebServer: 
   Type: AWS::EC2::Instance
   Properties: 
    AvailabilityZone: ca-central-1a
    ImageId: ami-0bf54ac1b628cf143
    InstanceType: t2.micro
    SecurityGroups: 
-    !REF SSH-SecurityGroup
-    !REF MYSQL-SecurityGroup
+    - !REF SSH-SecurityGroup
+    - !REF MYSQL-SecurityGroup
 
  MyEIP:
   Type: AWS::EC2::EIP
