--- a/CodePipeline_EC2_1.yaml
+++ b/CodePipeline_EC2_1.yaml
@@ -1,37 +1,45 @@
+AWSTemplateFormatVersion: 2010-09-09
+Description: >-
+  AWS CloudFormation Sample Template EC2InstanceWithSecurityGroupSample: Create
+  an Amazon EC2 instance running the Amazon Linux AMI. The AMI is chosen based
+  on the region in which the stack is run. This example creates an EC2 security
+  group for the instance to give you SSH access. **WARNING** This template
+  creates an Amazon EC2 instance. You will be billed for the AWS resources used
+  if you create a stack from this template.
 Parameters: {}
 Resources: 
- WebServer: 
-  Type: AWS::EC2::Instance
-  Properties: 
-   AvailabilityZone: ca-central-1a
-   ImageId: ami-0bf54ac1b628cf143
-   InstanceType: t2.micro
-   SecurityGroups: 
-    - !REF SSH-SecurityGroup
-    - !REF MYSQL-SecurityGroup
+  WebServer: 
+    Type: AWS::EC2::Instance
+      Properties: 
+        AvailabilityZone: ca-central-1a
+        ImageId: ami-0bf54ac1b628cf143
+        InstanceType: t2.micro
+        SecurityGroups: 
+          - !REF SSH-SecurityGroup
+          - !REF MYSQL-SecurityGroup
 
- MyEIP:
-  Type: AWS::EC2::EIP
-  Properties:
-   InstanceId: !Ref MyInstance
+  MyEIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      InstanceId: !Ref MyInstance
 
- SSH-SecurityGroup:
-  Type: AWS::EC2::SecurityGroup
-  Properties: 
-   GroupDescription: Enable Security for SSH
-   SecurityGroupIngress:
-    - CidrIp: 0.0.0.0/0
-      FromPort: 22
-      IpProtocol: TCP
-      ToPort: 1100
+  SSH-SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties: 
+      GroupDescription: Enable Security for SSH
+      SecurityGroupIngress:
+        - CidrIp: 0.0.0.0/0
+          FromPort: 22
+          IpProtocol: TCP
+          ToPort: 1100
 
- MYSQL-SecurityGroup:
-  Type: AWS::EC2::SecurityGroup
-  Properties:
-   GroupDescription: Enable Security for MySQL
-   SecurityGroupIngress:
-    - CidrIp: 0.0.0.0/0 
-      FromPort: 22
-      IpProtocol: TCP
-      ToPort: 1200
+  MYSQL-SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Enable Security for MySQL
+      SecurityGroupIngress:
+        - CidrIp: 0.0.0.0/0 
+          FromPort: 22
+          IpProtocol: TCP
+          ToPort: 1200
    
