Fixing Dependency Issue

--- a/CodePipeline_EC2_1.yaml
+++ b/CodePipeline_EC2_1.yaml
@@ -21,7 +21,7 @@ Resources:
   MyEIP:
     Type: AWS::EC2::EIP
     Properties:
-      InstanceId: !Ref MyInstance
+      InstanceId: !Ref WebServer
 
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
