--- a/CodePipeline_EC2_1.yaml
+++ b/CodePipeline_EC2_1.yaml
@@ -12,7 +12,7 @@ Resources:
     Properties: 
       AvailabilityZone: ca-central-1a
       ImageId: ami-0bf54ac1b628cf143
-      InstanceType: t2.small
+      InstanceType: t2.micro
       SecurityGroups: 
         - !Ref InstanceSecurityGroup
         - !Ref DBSecurityGroup
